# raw-thumbnailer

./: Cargo.toml  Makefile  README.md  raw-thumbnailer.thumbnailer
src/: main.rs
