[package]
name = "raw-thumbnailer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
image = "0.25"
thiserror = "1.0"
rawler = "0.7.1"
directories = "6.0"
log = "0.4"
simplelog = "0.12"
zbus = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
url = "2.5"
clap = { version = "4", features = ["derive"] }
md5 = "0.8"
png = "0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
